- Some code reorganization. - Removed local config files from repo. - Added base classes for frontend. - Added some API code tests.

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,9 @@
                 baseUrl: "{{MEDIA_URL}}js/"
             })
         </script>
+
+        {% block extra_head %}
+        {% endblock %}
     </head>
 
     <body>
