Using backbone-tastypie js lib

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
         <script type='text/javascript' src='{{MEDIA_URL}}js/lib/underscore.js'></script>
         <script type='text/javascript' src='{{MEDIA_URL}}js/lib/backbone.js'></script>
         <script type='text/javascript' src='{{MEDIA_URL}}js/lib/require.js'></script>
+        <script type='text/javascript' src='{{MEDIA_URL}}js/lib/backbone-tastypie.js'></script>
         <script type='text/javascript'>
             require.config({
                 baseUrl: "{{MEDIA_URL}}js/"
